# OpenVMS

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  OpenVMS.md  OpenVMS2.md  PHASES.md  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml
UIejemplo/: app.jsx  (+3 more)
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_frigate_config_history.py  0003_lpr_tables.py  0004_mqtt_credentials.py  0005_events_source_severity.py  0006_people_counting_hourly.py  0008_pgvector_extension.py  0009_plugin_tables.py  0010_rename_metadata_to_extra_data.py  0011_system_config.py
backend/app/: config.py  database.py  deps.py  main.py
backend/app/api/v1/: auth.py  cameras.py  events.py  frigate_config.py  plugins.py  recordings.py  router.py  servers.py  system.py  system_config.py  users.py
backend/app/api/ws/: events.py
backend/app/models/: __init__.py  audit_log.py  camera.py  event.py  frigate_config.py  frigate_server.py  people_counting.py  plugins.py  system_config.py  user.py
backend/app/plugins/: base.py  registry.py
backend/app/schemas/: auth.py  camera.py  event.py  frigate_config.py  user.py
backend/app/scripts/: download_models.py  seed_db.py
backend/app/services/: auth_service.py  event_service.py  export_service.py  frigate_config_service.py  frigate_service.py  mqtt_service.py  ome_service.py  system_config_service.py
backend/tests/: test_counting_and_line_crossing.py  test_plugins_ai.py  test_plugins_analytics.py  test_plugins_lpr.py
(+153 files in other folders)
